--- a/cyclorun/content/themes/cyclorun/app/scss/components/_registration-form.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/components/_registration-form.scss
@@ -99,6 +99,14 @@
 	}
 }
 
+.success{
+	text-align: center;
+    color: #00757f;
+    font-weight: bold;
+    margin-top: 2rem;
+    width: 103%;
+}
+
 .advise{
 	&__img{
 		float:left;
