outing creation page update

--- a/cyclorun/content/themes/cyclorun/app/scss/components/_outing-creation-page.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/components/_outing-creation-page.scss
@@ -239,7 +239,8 @@
     border-radius:1rem;
 }
 
-.navbar__button{
+.btn__success__outing{
+    margin-top:1rem;
     background-color: $blueduck;
     border-radius: 0.5rem;
 }
