--- a/cyclorun/content/themes/cyclorun/app/scss/pages/_custom-home.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/pages/_custom-home.scss
@@ -19,9 +19,9 @@
     &__attachments {
 
         &__image {
-            max-width: 100%;
-            max-height: 100%;
-            display: block;
+            object-fit: cover;
+            min-width: 100%;
+            min-height: 100%;
         }
     }
 
