--- a/cyclorun/content/themes/cyclorun/app/scss/pages/_profile-page.scss
+++ b/cyclorun/content/themes/cyclorun/app/scss/pages/_profile-page.scss
@@ -7,7 +7,9 @@
 /* photo de profile */
 .avatar__img{
     display: block;
+    width: 80%;
     border-radius: 50%;
+    margin: auto;
 }
 
 /* Toute la page */
@@ -28,14 +30,23 @@
 
 //Titre "mon profile"
 .profile__title{
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
 }
 
 /* Infos perso sous la photo */
 .profile__infos__personal{
     display: flex;
     flex-direction: column;
+    text-align: center;
     align-items: center;
+
+    &__avatar{
+        max-width: 50%;
+    }
+
+    &__title{
+        margin-top:2rem;
+    }
 }
 
 // age et ville
