--- a/cyclorun/content/themes/cyclorun/public/css/style.css
+++ b/cyclorun/content/themes/cyclorun/public/css/style.css
@@ -9569,7 +9569,18 @@ a:visited {
   margin: 1rem;
   background-color: #00757F;
   border-radius: 0.5rem;
-  color: #F5F5F5; }
+  color: #F5F5F5;
+  border: none; }
+
+.cancel-filter {
+  height: 2.2rem;
+  margin: 1rem;
+  background-color: #00757F;
+  border-radius: 0.5rem;
+  color: #F5F5F5;
+  padding: 5px 6px; }
+  .cancel-filter:visited {
+    color: #F5F5F5; }
 
 .articles-list {
   display: flex;
